--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "axios": "^1.7.1",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-zoom": "^2.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -30,4 +33,4 @@
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
   }
-} 
+}
