update mongodb url from .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5001
-MONGO_URI='mongodb+srv://vijjudata:vijju5592@cluster0.05wzr.mongodb.net/performance_dashboard?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://vijjudata:vijju5592@cluster0.vqv6fct.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
