--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "react-chartjs-2": "^5.2.0",
+    "recharts": "^3.1.2",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
   }
